--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                 </tr>
                                 <tr>
                                     <td>20:00〜20:45</td>
-                                    <td>現場で使える！</td>
+                                    <td>めざせ！！！！</td>
                                 </tr>
                                 <tr>
                                     <td>20:45〜21:00</td>
